--- a/growTree.html
+++ b/growTree.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/assets/bootstrap-4.4.1-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="assets/bootstrap-4.4.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
     <title>Hello, world!</title>
 </head>
 
@@ -40,7 +40,7 @@
             <p class="text-center text-uppercase judul">grow puspa tree</p>
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="/assets/gambar/undraw_Tree_swing_646s.svg" alt="gambarTree" class="img-thumbnail">
+                    <img src="assets/gambar/undraw_Tree_swing_646s.svg" alt="gambarTree" class="img-thumbnail">
                 </div>
                 <div class="col-lg-6">
                     <div class="kotak">
@@ -151,10 +151,10 @@
             </div>
         </div>
     </section>
-    <script src="/assets/bootstrap-4.4.1-dist/js/jquery-3.4.1.slim.min.js"></script>
-    <script src="/assets/bootstrap-4.4.1-dist/js/popper.min.js"></script>
-    <script src="/assets/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/bootstrap-4.4.1-dist/js/jquery-3.4.1.slim.min.js"></script>
+    <script src="assets/bootstrap-4.4.1-dist/js/popper.min.js"></script>
+    <script src="assets/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
