--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/assets/bootstrap-4.4.1-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/fontawesome/css/all.min.css">
+    <!-- <link rel="stylesheet" href="/assets/bootstrap-4.4.1-dist/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
     <title>Hello, world!</title>
 </head>
 
@@ -42,10 +44,10 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/assets/gambar/alam2.png" class="d-block w-100" alt="...">
+                    <img src="assets/gambar/alam2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/gambar/bumi_zag.png" class="d-block w-100" alt="...">
+                    <img src="assets/gambar/bumi_zag.png" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -71,31 +73,31 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="card-body">
-                        <img class="card-img-top" src="/assets/gambar/smallTree.png" alt="Growt Plant" height="200px">
+                        <img class="card-img-top" src="assets/gambar/smallTree.png" alt="Growt Plant" height="200px">
                         <h5 class="card-title">GROW PUSPA TREE</h5>
                         <p class="card-text text-justify">Puspa, seru, atau medang gatal (Schima wallichii) adalah
                             sejenis pohon penghasil kayu pertukangan berkualitas sedang. Pohon ini termasuk ke dalam
                             keluarga teh (Theaceae), dan menyebar luas mulai dari Nepal, melalui Asia Tenggara, hingga
                             ke Papua Nugini. Disebut medang gatal karena pohon ini memiliki lapisan semacam miang di
                             bawah pepagannya, yang keluar berhamburan ketika digergaji.</p>
-                        <a href="/growTree.html" class="btn btn-primary">detail news</a>
+                        <a href="growTree.html" class="btn btn-primary">detail news</a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="card-body">
-                        <img class="card-img-top" src="/assets/gambar/recyle.jpg" alt="Growt Plant" height="200px">
+                        <img class="card-img-top" src="assets/gambar/recyle.jpg" alt="Growt Plant" height="200px">
                         <h5 class="card-title">RECYLE</h5>
                         <p class="card-text text-justify">Daur ulang adalah proses untuk menjadikan suatu bahan bekas
                             menjadi bahan baru dengan tujuan mencegah adanya sampah yang sebenarnya dapat menjadi
                             sesuatu yang berguna, mengurangi penggunaan bahan baku yang baru, mengurangi penggunaan
                             energi, mengurangi polusi, kerusakan lahan, dan emisi gas rumah kaca jika dibandingkan
                             dengan proses pembuatan barang baru.</p>
-                        <a href="/recyle.html" class="btn btn-primary">detail news</a>
+                        <a href="recyle.html" class="btn btn-primary">detail news</a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="card-body">
-                        <img class="card-img-top" src="/assets/gambar/water.png" alt="Growt Plant" height="200px">
+                        <img class="card-img-top" src="assets/gambar/water.png" alt="Growt Plant" height="200px">
                         <h5 class="card-title">LESS WATER</h5>
                         <p class="card-text text-justify">
                             Sahabat, tahukah pada 2025 sebanyak 321 juta jiwa penduduk Indonesia diprediksi akan sulit
@@ -103,7 +105,7 @@
                             Kebutuhan air tidak hanya untuk menjaga kesehatan diri, namun beberapa kegiatan sehari-hari
                             seperti mencuci, memasak, membersihkan diri juga membutuhkan air dalam penggunaannya.
                         </p>
-                        <a href="/lesswater.html" class="btn btn-primary">detail news</a>
+                        <a href="lesswater.html" class="btn btn-primary">detail news</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +117,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="card" style="width: 15rem;">
-                        <img class="card-img-top" src="/assets/gambar/natan.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="assets/gambar/natan.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title text-white">NATHANAEL JOSHUA</h4>
                             <p class="card-text text-white">2201729972 <br>
@@ -125,7 +127,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="card" style="width: 15rem;">
-                        <img class="card-img-top" src="/assets/gambar/arief.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="assets/gambar/arief.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title text-uppercase text-white">Arief Dwi Rachmadian</h4>
                             <p class="card-text text-white">2201730406</p>
@@ -134,7 +136,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="card" style="width: 15rem;">
-                        <img class="card-img-top" src="/assets/gambar/kevin.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="assets/gambar/kevin.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title text-uppercase text-white">KEVIN</h4>
                             <p class="card-text text-white">2201731781</p>
@@ -143,7 +145,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="card" style="width: 15rem;">
-                        <img class="card-img-top" src="/assets/gambar/wahyu.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="assets/gambar/wahyu.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title text-uppercase text-white">WAHYU HIDAYAT</h4>
                             <p class="card-text text-white">2201731812</p>
@@ -230,10 +232,11 @@
             </div>
         </div>
     </section>
-    <script src="/assets/bootstrap-4.4.1-dist/js/jquery-3.4.1.slim.min.js"></script>
-    <script src="/assets/bootstrap-4.4.1-dist/js/popper.min.js"></script>
-    <script src="/assets/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/bootstrap-4.4.1-dist/js/jquery-3.4.1.slim.min.js"></script>
+    <script src="assets/bootstrap-4.4.1-dist/js/popper.min.js"></script>
+    <script src="assets/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
