update our vission mission and fix bug

--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" href="assets/gambar/logoGogreen.png" type="image/png">
     <!-- Bootstrap CSS -->
     <!-- <link rel="stylesheet" href="/assets/bootstrap-4.4.1-dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
-    <title>Hello, world!</title>
+    <title>Home</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar w/ text</a>
+        <a class="navbar-brand" href="#">
+            <img src="/assets/gambar/gogreen.png" width="120" height="50" alt="">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,7 +33,7 @@
                     <a class="nav-link" href="#news"><i class="far fa-newspaper"></i> News</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#profile"><i class="fas fa-id-card"></i> Profile</a>
+                    <a class="nav-link" href="profile.html"><i class="fas fa-id-card"></i> Profile</a>
                 </li>
             </ul>
         </div>
@@ -74,7 +76,7 @@
                 <div class="col-sm-4">
                     <div class="card-body">
                         <img class="card-img-top" src="assets/gambar/smallTree.png" alt="Growt Plant" height="200px">
-                        <h5 class="card-title">GROW PUSPA TREE</h5>
+                        <h5 class="card-title">PUSPA TREE</h5>
                         <p class="card-text text-justify">Puspa, seru, atau medang gatal (Schima wallichii) adalah
                             sejenis pohon penghasil kayu pertukangan berkualitas sedang. Pohon ini termasuk ke dalam
                             keluarga teh (Theaceae), dan menyebar luas mulai dari Nepal, melalui Asia Tenggara, hingga
@@ -86,7 +88,7 @@
                 <div class="col-sm-4">
                     <div class="card-body">
                         <img class="card-img-top" src="assets/gambar/recyle.jpg" alt="Growt Plant" height="200px">
-                        <h5 class="card-title">RECYLE</h5>
+                        <h5 class="card-title">RECYCLE</h5>
                         <p class="card-text text-justify">Daur ulang adalah proses untuk menjadikan suatu bahan bekas
                             menjadi bahan baru dengan tujuan mencegah adanya sampah yang sebenarnya dapat menjadi
                             sesuatu yang berguna, mengurangi penggunaan bahan baku yang baru, mengurangi penggunaan
@@ -111,44 +113,36 @@
             </div>
         </div>
     </section>
-    <section class="profile" style="background-color: rgba(8, 129, 18, 0.856);" id="profile">
+    <section class="visi-misi" id="visi-misi">
         <div class="container">
-            <h1 class="text-white text-center" style="padding: 20px;">OUR TEAM</h1>
+            <p class="text-center text-uppercase judul text-white">Our Vission & Mission</p>
             <div class="row">
-                <div class="col-lg-3">
-                    <div class="card" style="width: 15rem;">
-                        <img class="card-img-top" src="assets/gambar/natan.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h4 class="card-title text-white">NATHANAEL JOSHUA</h4>
-                            <p class="card-text text-white">2201729972 <br>
-                            </p>
-                        </div>
-                    </div>
+                <div class="col-lg-6">
+                    <img src="assets/gambar/undraw_profile_data_mk6k.svg" alt="gambarTree" class="img-thumbnail">
                 </div>
-                <div class="col-lg-3">
-                    <div class="card" style="width: 15rem;">
-                        <img class="card-img-top" src="assets/gambar/arief.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h4 class="card-title text-uppercase text-white">Arief Dwi Rachmadian</h4>
-                            <p class="card-text text-white">2201730406</p>
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="card text-white">
+                                <div class="card-body">
+                                    <h4 class="card-title">Vission</h4>
+                                    <p class="card-text">
+                                        Growing knowledge while public awareness will consider the importance of nature.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card" style="width: 15rem;">
-                        <img class="card-img-top" src="assets/gambar/kevin.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h4 class="card-title text-uppercase text-white">KEVIN</h4>
-                            <p class="card-text text-white">2201731781</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card" style="width: 15rem;">
-                        <img class="card-img-top" src="assets/gambar/wahyu.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h4 class="card-title text-uppercase text-white">WAHYU HIDAYAT</h4>
-                            <p class="card-text text-white">2201731812</p>
+                        <div class="col-lg-12">
+                            <div class="card text-white">
+                                <div class="card-body">
+                                    <h4 class="card-title">Mission</h4>
+                                    <p class="card-text">
+                                        1. Realizing a high quality of human life, advanced and prosperous. <br>
+                                        2. Foster a love of the motherland and the environment. <br>
+                                        3. Participate in saving water, energy, etc.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -159,24 +153,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3">
-                    <div class="card" style="width: 16rem;">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title text-uppercase text-white"
                                 style="border-bottom: 2px solid black; padding: 5px;">
                                 Latest NEWS
                             </h5>
                             <p class="card-text">
-                                <ul class="text-white">
-                                    <li>GROW TREE</li>
-                                    <li>RECYCLE</li>
-                                    <li>LESS WATER</li>
+                                <ul class="text-white list-group">
+                                    <li class="list-group-item">PUSPA TREE</li>
+                                    <li class="list-group-item">RECYCLE</li>
+                                    <li class="list-group-item">LESS WATER</li>
                                 </ul>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="card" style="width: 16rem;">
+                    <div class="card">
                         <div class="card-body ">
                             <h5 class="card-title text-uppercase text-white"
                                 style="border-bottom: 2px solid black; padding: 5px;">
@@ -193,14 +187,14 @@
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="card" style="width: 16rem;">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title text-uppercase text-white"
                                 style="border-bottom: 2px solid black; padding: 5px;">
                                 Media Social
                             </h5>
                             <p class="card-text">
-                                <ul class="text-white">
+                                <ul class="text-white list-group">
                                     <a href="https://www.instagram.com/">
                                         <li class="list-group-item"><i class="fab fa-instagram"></i> Instagram</li>
                                     </a>
@@ -208,7 +202,7 @@
                                         <li class="list-group-item"><i class="fab fa-facebook"></i> Facebook</li>
                                     </a>
                                     <a href="https://www.whatsapp.com">
-                                        <li class="list-group-item"><i class="fab fa-whatsapp"></i> LESS WATER</li>
+                                        <li class="list-group-item"><i class="fab fa-whatsapp"></i> Whatsap</li>
                                     </a>
                                 </ul>
                             </p>
@@ -216,7 +210,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="card" style="width: 16rem;">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title text-uppercase text-white"
                                 style="border-bottom: 2px solid black; padding: 5px;">
