--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,7 @@
 
 <head>
     <!-- Required meta tags -->
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="assets/gambar/logoGogreen.png" type="image/png">
@@ -12,7 +13,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
-    <title>Puspa Tree</title>
+    <title>Profile</title>
 </head>
 
 <body>
@@ -28,49 +29,71 @@
                     <a class="nav-link" href="index.html"> <i class="fa fa-home"></i> Home </a>
                 </li>
                 <li>
-                    <a class="nav-link active" href="index.html#news"><i class="far fa-newspaper"></i> News</a>
+                    <a class="nav-link" href="index.html#news"><i class="far fa-newspaper"></i> News</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="index.html#profile"><i class="fas fa-id-card"></i> Profile</a>
+                    <a class="nav-link active" href="profile.html"><i class="fas fa-id-card"></i> Profile</a>
                 </li>
             </ul>
         </div>
     </nav>
     <!-- content -->
-    <section>
+    <section class="profile">
         <div class="container">
-            <p class="text-center text-uppercase judul"> puspa tree</p>
             <div class="row">
-                <div class="col-lg-6">
-                    <img src="assets/gambar/undraw_Tree_swing_646s.svg" alt="gambarTree" class="img-thumbnail">
+                <div class="col-lg">
+                    <div class="card">
+                        <img src="assets/gambar/pasadidan.jpg" class="card-img-top" alt="fotopasadidan">
+                        <div class="card-body">
+                            <h4>Pashadidan Fadhillah</h4>
+                            <p class="card-text">
+                                2201728345
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="kotak">
-                        <p class="text-justify">
-                            Puspa, seru, atau medang gatal (Schima wallichii) adalah sejenis pohon penghasil kayu
-                            pertukangan berkualitas sedang. Pohon ini termasuk ke dalam keluarga teh (Theaceae), dan
-                            menyebar luas mulai dari Nepal, melalui Asia Tenggara, hingga ke Papua Nugini. Disebut
-                            medang gatal karena pohon ini memiliki lapisan semacam miang di bawah pepagannya, yang
-                            keluar berhamburan ketika digergaji dan menimbulkan rasa gatal di kulit. Nama spesiesnya
-                            diberikan untuk menghormati N. Wallich (1786 – 1854), ahli botani berkebangsaan Denmark yang
-                            telah berjasa mengembangkan Kebun Raya Kalkuta.
-
-                            Pohon ini juga dikenal dengan aneka nama daerah, seperti simartolu (Bat.); medang miang
-                            (Mink.); mĕdang sĕru, sĕru (Bk.); kĕmĕtru (Lamp.); huru batu, huru manuk, puspa (Sd.); puspa
-                            (Jw.)[3]. Di Ketapang, Kalimantan Barat, pohon ini dikenal dengan nama penaga.
-                            Pohon yang selalu hijau, berukuran sedang hingga besar, mencapai tinggi 47 m. Batang bulat
-                            torak, gemangnya hingga 250 cm namun biasanya jauh kurang dari itu; batang bebas cabang
-                            hingga sekitar 25 m. Pepagan memecah dangkal sampai sedang, membentuk alur-alur memanjang,
-                            coklat kemerahan hingga abu-abu gelap; sebelah dalam berwarna merah terang, dengan lapisan
-                            ‘miang’ yang mengiritasi kulit.[4]
-
-                            Daun tersebar dalam spiral, bertangkai sekitar 3 mm; helai daun lonjong hingga jorong lebar,
-                            6–13 × 3–5 cm, pangkal bentuk baji dan ujung runcing atau meruncing, dengan tepian
-                            bergerigi. Bunga tunggal di ketiak di ujung ranting, dengan dua daun pelindung,
-                            berbilangan-5; kelopak menetap hingga menjadi buah; mahkota putih, saling melekat di
-                            pangkalnya; benangsari banyak. Buah kotak hampir bulat, diameter 2–3 cm, membuka dengan 5
-                            katup; biji dikitari oleh sayap
-                        </p>
+                <div class="col-lg">
+                    <div class="card">
+                        <img src="assets/gambar/natan.jpg" class="card-img-top" alt="fotopasadidan">
+                        <div class="card-body">
+                            <h4>NATHANAEL JOSHUA</h4>
+                            <p class="card-text">
+                                2201729972
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg">
+                    <div class="card">
+                        <img src="assets/gambar/arief.jpg" class="card-img-top" alt="fotopasadidan">
+                        <div class="card-body">
+                            <h4>ARIEF DWI RACHMADIAN</h4>
+                            <p class="card-text">
+                                2201730406
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg">
+                    <div class="card">
+                        <img src="assets/gambar/kevin.jpg" class="card-img-top" alt="fotopasadidan">
+                        <div class="card-body">
+                            <h4>KEVIN</h4>
+                            <p class="card-text">
+                                2201731781
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg">
+                    <div class="card">
+                        <img src="assets/gambar/wahyu.jpg" class="card-img-top" alt="fotopasadidan">
+                        <div class="card-body">
+                            <h4>WAHYU HIDAYAT</h4>
+                            <p class="card-text">
+                                2201731812
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
