--- a/recyle.html
+++ b/recyle.html
@@ -5,12 +5,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" href="assets/gambar/logoGogreen.png" type="image/png">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/bootstrap-4.4.1-dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="/assets/bootstrap-4.4.1-dist/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
-    <title>Hello, world!</title>
+    <title>Recycle</title>
 </head>
 
 <body>
@@ -29,7 +31,7 @@
                     <a class="nav-link active" href="index.html#news"><i class="far fa-newspaper"></i> News</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="index.html#profile"><i class="fas fa-id-card"></i> Profile</a>
+                    <a class="nav-link" href="profile.html"><i class="fas fa-id-card"></i> Profile</a>
                 </li>
             </ul>
         </div>
@@ -77,24 +79,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3">
-                    <div class="card" style="width: 16rem;">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title text-uppercase text-white"
                                 style="border-bottom: 2px solid black; padding: 5px;">
                                 Latest NEWS
                             </h5>
                             <p class="card-text">
-                                <ul class="text-white">
-                                    <li>GROW TREE</li>
-                                    <li>RECYCLE</li>
-                                    <li>LESS WATER</li>
+                                <ul class="text-white list-group">
+                                    <li class="list-group-item">PUSPA TREE</li>
+                                    <li class="list-group-item">RECYCLE</li>
+                                    <li class="list-group-item">LESS WATER</li>
                                 </ul>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="card" style="width: 16rem;">
+                    <div class="card">
                         <div class="card-body ">
                             <h5 class="card-title text-uppercase text-white"
                                 style="border-bottom: 2px solid black; padding: 5px;">
@@ -111,14 +113,14 @@
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="card" style="width: 16rem;">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title text-uppercase text-white"
                                 style="border-bottom: 2px solid black; padding: 5px;">
                                 Media Social
                             </h5>
                             <p class="card-text">
-                                <ul class="text-white">
+                                <ul class="text-white list-group">
                                     <a href="https://www.instagram.com/">
                                         <li class="list-group-item"><i class="fab fa-instagram"></i> Instagram</li>
                                     </a>
@@ -126,7 +128,7 @@
                                         <li class="list-group-item"><i class="fab fa-facebook"></i> Facebook</li>
                                     </a>
                                     <a href="https://www.whatsapp.com">
-                                        <li class="list-group-item"><i class="fab fa-whatsapp"></i> LESS WATER</li>
+                                        <li class="list-group-item"><i class="fab fa-whatsapp"></i> Whatsap</li>
                                     </a>
                                 </ul>
                             </p>
@@ -134,7 +136,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="card" style="width: 16rem;">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title text-uppercase text-white"
                                 style="border-bottom: 2px solid black; padding: 5px;">
@@ -149,11 +151,9 @@
                 </div>
             </div>
         </div>
-    </section>
-    <script src="assets/bootstrap-4.4.1-dist/js/jquery-3.4.1.slim.min.js"></script>
-    <script src="assets/bootstrap-4.4.1-dist/js/popper.min.js"></script>
-    <script src="assets/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.js"></script>
+        <script src="assets/bootstrap-4.4.1-dist/js/jquery-3.4.1.slim.min.js"></script>
+        <script src="assets/bootstrap-4.4.1-dist/js/popper.min.js"></script>
+        <script src="assets/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
