update link to news

--- a/recyle.html
+++ b/recyle.html
@@ -17,7 +17,9 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar w/ text</a>
+        <a class="navbar-brand" href="#">
+            <img src="assets/gambar/gogreen.png" width="120" height="50" alt="">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -87,9 +89,15 @@
                             </h5>
                             <p class="card-text">
                                 <ul class="text-white list-group">
-                                    <li class="list-group-item">PUSPA TREE</li>
-                                    <li class="list-group-item">RECYCLE</li>
-                                    <li class="list-group-item">LESS WATER</li>
+                                    <a href="growTree.html">
+                                        <li class="list-group-item">PUSPA TREE</li>
+                                    </a>
+                                    <a href="recyle.html">
+                                        <li class="list-group-item">RECYCLE</li>
+                                    </a>
+                                    <a href="lesswater.html">
+                                        <li class="list-group-item">LESS WATER</li>
+                                    </a>
                                 </ul>
                             </p>
                         </div>
